# sdlc-factory

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: README.md
agents/architect/: AGENTS.md  SOUL.md
agents/coder/: AGENTS.md  SOUL.md
agents/deployer/: IDENTITY.md
agents/monitor/: AGENTS.md  SOUL.md
agents/planner/: IDENTITY.md  SOUL.md
agents/sessions/: architect-276859.session  architect-95e153.session  coder-195955.session  coder-20ede9.session  coder-3c1eac.session  coder-694edb.session  coder-7a3940.session  coder-b6fd03.session  planner-373fbb.session  planner-901de9.session  planner-fe4578.session  tester-12e32c.session  tester-14289e.session  tester-23f540.session  tester-491bb1.session  tester-49fad2.session  tester-4d8325.session  tester-afdc02.session  tester-c796f7.session
agents/shared/: PROTOCOL.md  SKILL.md
agents/tester/: AGENTS.md  IDENTITY.md  SOUL.md
cli/: .coverage  .gitignore  MANIFEST.in  README.md  build.sh  docker-compose.yml
cli/docs/: dot-sdlc-factory
cli/postgres/: pgvector-db.service
cli/tests/: conftest.py  test_agent.py  test_chat.py  test_cli.py  test_config_manager.py  test_db.py  test_heartbeat.py  test_mcp_server.py  test_memory.py  test_state.py  test_telemetry.py  test_tools.py  (+1 more)
docs/: dot-sdlc-factory
postgres/: pgvector-db.service  schema.sql
scripts/: recover_memories.py
systemd/: sdlc-factory.service  sdlc-services.service
tests/: test_agent.py  test_chat.py  test_cli.py  test_db.py  test_heartbeat.py  test_main.py  test_memory.py  test_state.py  test_telemetry.py  test_tools.py
(+57 files in other folders)
